--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -177,12 +177,13 @@ a.more{background: url(../images/arrow_blue_down.jpg) center right no-repeat; pa
 .quicktabs_wrapper{background: #f0eeea; padding: 4px; margin: 15px 0;}
 ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 .quicktabs_tabs li.active{background: #fff;}
-.quicktabs_main{background: #fff; display: block; clear: both; padding: 10px; }
+.quicktabs_main{background: #fff; display: block; clear: both; padding: 10px; width: 310px;}
 
 #quicktabs-fm_product_details ul{width: 330px;}
 #quicktabs-fm_product_details li{min-width: 80px; padding: 4px; text-align:center;}
 #quicktabs-fm_product_details li a {font-size: 11px; font-style: normal; font-family:"museo-sans-1","museo-sans-2", Helvetica;}
 
+.details-list li {padding: 0 0 0 12px; text-aligh: left; font-size: 12px; background: url("/sites/all/themes/fadmashion_commerce/images/arrow_bullet.jpg") no-repeat scroll 2px 2px transparent}
 
 .designerInfo{width: 740px; border-top: 3px solid #f0efed; padding: 10px 0 0 0; margin-top: 10px;}
 .designerInfo h1{font-size: 16px; margin-bottom: 15px;}
