--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -429,18 +429,16 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .assistance h1{font-size: 20px; text-align:left;}
 .assistance .form-textarea{padding: 10px; border: 1px solid #ded9cf; resize: none; width: 230px; height: 150px; font-size: 13px;}
 
-
-
 .addresses{background: #fff; float: left; font-size: 12px; margin: 15px 0 0 0; line-height: 16px; border-radius:5px; -webkit-border-radius: 5px; -moz-border-radius: 5px; }
 .addresses div{float: left; width: 200px; padding: 0 15px 0 0;}
 .addresses h1{color: #938070; text-transform:uppercase; font-size: 11px; font-weight:700; letter-spacing:1px; margin-bottom: 6px;}
 
-.confirmation .share{border: 3px solid #eee8e3; border-radius:8px; -webkit-border-radius: 8px; -moz-border-radius: 8px; padding:  20px 15px; text-align:center;}
-.confirmation .share h1{color: #be4038; font-size: 27px; font-weight: 100; margin-bottom: 6px;}
-.confirmation .share h2{font-size: 13px; font-weight: 500;}
-.confirmation .icons img{margin: 0 4px;}
-.confirmation .icons{border-bottom: 1px solid  #eee8e3; padding: 6px 0 18px 0;}
-.confirmation .facebook{color: #5e76ad; font-size: 14px; font-weight: 300; padding: 18px 0;}
+.page-express-checkout-confirmation .share{border: 3px solid #eee8e3; border-radius:8px; -webkit-border-radius: 8px; -moz-border-radius: 8px; padding:  20px 15px; text-align:center;}
+.page-express-checkout-confirmation .share h1{color: #be4038; font-size: 27px; font-weight: 100; margin-bottom: 6px;}
+.page-express-checkout-confirmation .share h2{font-size: 13px; font-weight: 500;}
+.page-express-checkout-confirmation .icons img{margin: 0 4px;}
+.page-express-checkout-confirmation .icons{border-bottom: 1px solid  #eee8e3; padding: 6px 0 18px 0;}
+.page-express-checkout-confirmation .facebook{color: #5e76ad; font-size: 14px; font-weight: 300; padding: 18px 0;}
 
 
 
