--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -433,7 +433,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .addresses div{float: left; width: 200px; padding: 0 15px 0 0;}
 .addresses h1{color: #938070; text-transform:uppercase; font-size: 11px; font-weight:700; letter-spacing:1px; margin-bottom: 6px;}
 
-.page-express-checkout-confirmation .share{border: 3px solid #eee8e3; border-radius:8px; -webkit-border-radius: 8px; -moz-border-radius: 8px; padding:  20px 15px; text-align:center;}
+.page-express-checkout-confirmation .share{border: 3px solid #eee8e3; width: 231px; border-radius:8px; -webkit-border-radius: 8px; -moz-border-radius: 8px; padding:  20px 15px; text-align:center;}
 .page-express-checkout-confirmation .share h1{color: #be4038; font-size: 27px; font-weight: 100; margin-bottom: 6px;}
 .page-express-checkout-confirmation .share h2{font-size: 13px; font-weight: 500;}
 .page-express-checkout-confirmation .icons img{margin: 0 4px;}
