--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -195,8 +195,8 @@ ul.quicktabs_tabs, .quicktabs_tabs li{float: left; list-style-type:none;}
 .quote .top{ background: url(../images/bg_quote_top.jpg) top left no-repeat;}
 .quote .bg{ background: url(../images/bg_quote_bottom.jpg) bottom left no-repeat;}
 .quoteImg1{background: url(../images/bg_quote1.png) 30px 12px no-repeat; padding: 15px;}
-.quoteImg2{background: url(../images/bg_quote2.png) bottom right no-repeat; padding: 10px 65px 15px 85px; font-size: 16px; font-family:Georgia, "Times New Roman", Times, serif; font-style:italic; line-height: 20px;}
-
+.quoteImg2{background: url(../images/bg_quote2.png) bottom right no-repeat; padding: 10px 65px 15px 85px; font-size: 16px;  font-style:italic; line-height: 20px;}
+.quoteImg2 .field-item {font-family:Georgia, "Times New Roman", Times, serif;}
 
 .subCol{float: left; width: 250px; padding: 0 30px 0 0; position: relative; left: 30px;}
 .subCol h1{margin-bottom: 10px;}
