--- a/themes/fadmashion_commerce/css/front.css
+++ b/themes/fadmashion_commerce/css/front.css
@@ -95,6 +95,7 @@ div.password-confirm {display: none !important;}
 #fm-invite-request-form .form-text {width: 183px;} 
 #fm-invite-request-form .form-submit {margin: 4px 0 3px 3px; padding: 5px 12px;}
 
+
 #message_box{ margin: -10px 0 10px; width: 100%; color: #fff; font-size: 11px; background: url(../images/arrow_error.png) 8px 6px no-repeat; padding-top: 6px;  }
 #message_box .error, .messages.error  { -moz-border-radius:3px 3px 3px 3px; background:none repeat scroll 0 0 #CC3333; padding:5px; width:180px; color: #fff; border: 0px solid #000; }
 .messages.error {width: auto; font-size: 11px;}
@@ -107,7 +108,12 @@ label.invalid { margin-top: 6px; font-size: 11px; -moz-border-radius:3px 3px 3px
 border:1px solid #DDDDDD;
 width:274px;
 background-image:none;
+color: #72655C;
+font-size: 13px;
 }
+#fm-invite-send-email-form label {display:block;
+font-weight:normal;
+margin:10px 0 5px; color: #72655C;}
 
 
 #invite{padding: 12px;}
