--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -464,9 +464,9 @@ h2.socialSubtitle  {text-align: center; color:#8A7D71;font-family:Georgia,"Times
 
 /* Invite Form */
 
-#fm-invite-send-email-form .form-text, #fm-invite-send-email-form .form-textarea {border:1px solid #DDDDDD;width:274px;background-image:none;}
+#fm-invite-send-email-form .form-text, #fm-invite-send-email-form .form-textarea {color: #72655C;border:1px solid #DDDDDD;width:274px;background-image:none;}
 #fm-invite-send-email-form .form-submit { padding: 6px 12px; font-size: 14px}
-#fm-invite-send-email-form label {display: block; color: black; font-weight: normal;}
+#fm-invite-send-email-form label {display: block; color: #72655C;font-weight: normal;}
 
 
 /* Global ACCORDIAN STYLING*/
