--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -120,6 +120,7 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 
 /* Deals */
 .photos{padding-bottom: 100px;}
+.photos.no-thumbs{padding-bottom: 0px !important;}
 
 
 .timer{background: url(../images/bg_timer.jpg) top left repeat-x;border-top-left-radius:4px; -webkit-border-top-left-radius: 4px; -moz-borde-top-left-radius: 4px;border-top-right-radius:4px; -webkit-border-top-right-radius: 4px; -moz-borde-top-right-radius: 4px; height: 52px; color: #d9cac9; font-weight:normal; font-size: 13px;  width: 332px;}
