--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -85,7 +85,7 @@ th {border-bottom:3px solid #EEE8E3;}
 .sidebarRight .column1{width: 765px;float: left }
 .sidebarRight .column2{width:234px;  }
 .sidebarRight .mainContent{width: 740px;}
-.sidebarRight .photos{width: 401px;}
+.sidebarRight .photos{padding-right: 25px;  width: 376px;}
 
 .sidebarRight .sidebar{padding-left: 25px;}
 .sidebarRight .info{ width: 338px; }
@@ -243,10 +243,11 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 /* Preview */
 #dealPreview{ float: left; text-align:center; font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 #dealPreview h1{font-size: 26px;margin: 0 0 4px 0;}
+#cboxLoadedContent #dealPreview h1.pageTitle{color: #1D1C1A; margin-top: -25px; margin-bottom: 20px; font-size: 22px; font-weight: 100;}
 #dealPreview h2 {color: #92857a; font-size: 14px;}
 
 
-.dealFrame{ font-family:"museo-sans-1","museo-sans-2",Helvetica; width: 245px; border: 1px solid #dedcd4; float: left; margin: 13px; height: 475px;}
+.dealFrame{ font-family:"museo-sans-1","museo-sans-2",Helvetica; width: 245px; border: 1px solid #7A6857; float: left; margin: 13px; height: 475px;}
 .dealFrame .pricing{float:left;font-family:"museo-sans-1","museo-sans-2",Helvetica;font-size:11px;font-weight:700;height:30px;margin:15px 0;width:245px;}
 .dealFrame .pricing div{float: left; width: 81px; text-align:center; display: inline}
 .dealFrame .pricing .original{color: #998e82;background:  url(../images/dotted_vertical.png) top right repeat-y;}
@@ -263,7 +264,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 #dealPreview .dealFrame h1.itemName{font-size:14px;margin-bottom:4px;}
 #dealPreview .dealFrame h2, #dealPreview .dealFrame h2 a{font-size: 12px; margin-bottom: 8px;}
 
-.dealHeader{height: 16px; font-size: 14px; background: #7a6857; color: #fff; padding: 8px 0;border-top-left-radius: 4px; border-top-right-radius: 4px; -webkit-border-top-left-radius: 4px; -moz-border-radius-topleft: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topright: 4px; }
+.dealHeader{height: 16px; font-size: 14px; background: #7a6857; color: #fff; padding: 8px 0;}
 .onSale .dealHeader{background: #a22b24;font-size: 18px; line-height: 18px;}
 .onSale{border-color:#a22b24; }
 .ended{color: #cbbdb0;}
