--- a/themes/fadmashion_commerce/css/nivo-slider.css
+++ b/themes/fadmashion_commerce/css/nivo-slider.css
@@ -11,7 +11,7 @@
 
 #slider {
   min-height: 575px;
-  border: 1px solid #7A6857;
+  border: 1px solid #EAE7E5;
 }
 #slider .nivo-controlNav {
 bottom:-105px;
