--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -336,7 +336,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 #block-fm-commerce-cart-fm-commerce-cart .summary .pad, .summary .pad a {color:#322F2C;font-family:"museo-sans-1","museo-sans-2",Helvetica;font-style:normal;}
 #block-fm-commerce-cart-fm-commerce-cart .summary .alert {margin-top: 8px; background:url("../images/bg_summary_alert.png") no-repeat scroll left top transparent;color:#FFFFFF;font-size:14px;height:35px;line-height:42px;width:233px;}
 #block-fm-commerce-cart-fm-commerce-cart  .summary .alert div { padding-left:29px;}
-
+#block-fm-commerce-cart-fm-commerce-cart  .summary .itemThumb {display: block; margin: auto; border: 1px solid #EAE7E5; }
 
 #block-fm-commerce-cart-fm-commerce-cart  .item_wrapper {overflow: hidden;margin-top: 8px;}
 #block-fm-commerce-cart-fm-commerce-cart  #item_total_wrapper {font-weight: bold; font-size: 15px; border-top: 1px solid #aaa; margin-top: 20px; padding-top: 5px;}
