--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -1,6 +1,7 @@
 @CHARSET "ISO-8859-1";
 /* CSS Document */
-*{padding: 0; margin: 0; border: none;font-family:"museo-sans-1","museo-sans-2",Helvetica;}
+*{padding: 0; margin: 0; font-family:"museo-sans-1","museo-sans-2",Helvetica;}
+img{border: none;}
 #wrapper{text-align: center; background: url(../images/bg_header.jpg) top left repeat-x; width: 100%;}
 .container{width:1000px; text-align: left; margin: 0 auto; color: #322f2c; font-family:"museo-sans-1","museo-sans-2", Helvetica; }
 a{font-family: Georgia, "Times New Roman", Times, serif; font-style: italic; text-decoration:none; color: #0f6da3; font-size: 12px;}
