--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -262,7 +262,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .dealFrame  .store-name {display: inline;}
 	
 .dealFrame .itemThumb{ margin: 6px 0 14px 0; text-align:center; border: 1px solid #eae7e5;}
-#dealPreview .dealFrame h1.itemName{font-size:14px;margin-bottom:4px;}
+#dealPreview .dealFrame h1.itemName{font-size:14px;margin:auto;overflow:hidden;white-space:nowrap;width:240px;}
 #dealPreview .dealFrame h2, #dealPreview .dealFrame h2 a{font-size: 12px; margin-bottom: 8px;}
 
 .dealHeader{height: 16px; font-size: 14px; background: #7a6857; color: #fff; padding: 8px 0;}
