--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -133,6 +133,13 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 .scheduled .col1, .scheduled .col2{ padding: 12px 0 0 0; height: 50px;}
 .scheduled span{font-size: 18px;}
 .timer .col1, .timer .col2{padding-top: 13px; height: 25px;}
+.timerTbl{height: 52px;}
+.sep1{border-right: 1px solid #943530; padding-left: 6px;}
+.sep2{border-left: 1px solid #b65935;padding-right: 6px;}
+
+.timerTbl td{vertical-align: middle; }
+.countdown{float: left; }
+
 .dealNeeded{background: #821d17; color: #fff; font-style:normal; width: 150px;border-bottom-left-radius:4px; -webkit-border-bottom-left-radius: 4px; -moz-border-bottom-left-radius: 4px;border-bottom-right-radius:4px; -webkit-border-bottom-right-radius: 4px; -moz-border-bottom-right-radius: 4px; float: left; height: 26px; line-height:26px; font-size: 13px; width:332px;text-align: center; margin-bottom: 20px; }
 /*Override countdown style*/
 .timer .hasCountdown { background-color: transparent; border: 0px solid #000; display: inline;}
