--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -137,7 +137,7 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 .sep1{border-right: 1px solid #943530; padding-left: 6px;}
 .sep2{border-left: 1px solid #b65935;padding-right: 6px;}
 
-.timerTbl td{vertical-align: middle; }
+.timerTbl td{vertical-align: middle; background-color: none; }
 .countdown{float: left; }
 
 .dealNeeded{background: #821d17; color: #fff; font-style:normal; width: 150px;border-bottom-left-radius:4px; -webkit-border-bottom-left-radius: 4px; -moz-border-bottom-left-radius: 4px;border-bottom-right-radius:4px; -webkit-border-bottom-right-radius: 4px; -moz-border-bottom-right-radius: 4px; float: left; height: 26px; line-height:26px; font-size: 13px; width:332px;text-align: center; margin-bottom: 20px; }
