--- a/themes/fadmashion_commerce/css/static.css
+++ b/themes/fadmashion_commerce/css/static.css
@@ -1,25 +1,26 @@
-@CHARSET "ISO-8859-1";
 *{padding: 0; margin: 0;font-family:"museo-sans-1","museo-sans-2", Helvetica;}
-.container{width:680px; text-align: left; margin: 0 auto; color: #3f3c39; height: 100%; }
+#wrapper{text-align: center; background: url(../images/bg_header.jpg) top left repeat-x; width: 100%;}
+.container{width:1000px; text-align: left; margin: 0 auto; color: #3f3c39; height: 100%; }
 a{font-family: Georgia, "Times New Roman", Times, serif; font-style: italic; text-decoration:none; color: #0f6da3; font-size: 12px;}
 a:hover{color: #2e92cc;}
 img{border: none;}
 p{font-size: 13px; margin: 0 0 7px 0; }
 h1{font-weight:100; }
 h1 span{font-weight: 700}
-h1.pageTitle{color: #b83838; font-size: 23px; text-align:center; padding-bottom: 8px; }
 h2{font-size: 14px; font-weight:normal;margin: 0 0 10px 0;}
 h2 a{font-size: 14px;}
 ul{list-style-type: none;}
 .button, .form-submit {border: none; padding: 6px 12px;margin: 10px 0; border-radius:4px; -webkit-border-radius: 4px; -moz-border-radius: 4px; background: url(../images/b_bg_brown.jpg) top left; repeat: repeat-x; font-size: 12px; color: #fff; font-family:"museo-sans-1","museo-sans-2", Helvetica; font-style: normal;}
 .button:hover, .form-submit:hover{background-position: bottom left; color: #fff; cursor:pointer;}
+.checked{background-image: url(../images/b_bg_green.jpg)}
 .red{background-image: url(../images/b_bg_red.jpg)}
+.white{background:#e9e5e0  url(../images/b_bg_white.jpg) top left repeat-x; border: 1px solid #e0dbd6; color: #0f6da3;}
+.white:hover{color: #0f6da3}
+.disabled{opacity:0.4;filter:alpha(opacity=40)}
 
 #header{color: #fff}
 #header .row2{height: 59px;}
 #header .learnMore{color: #fff; font-size: 12px;}
-#stickyHeader{ position: fixed; top: 0; left: 0; width: 100%; background: url(../images/bg_header.jpg) top left repeat-x; background-position: fixed; z-index:999}
-#stickyHeader .box{width: 680px; margin: 0 auto; }
 .white{background: #fff;}
 
 .logo{float: left; margin-top: 15px;}
@@ -37,12 +38,16 @@ ul{list-style-type: none;}
 {float: left; display: inline;}
 
 
-#content{width: 680px; margin-top: 170px;}
-.sidebarRight .column1{width: 765px;float: left }
-.sidebarRight .column2{width:234px;}
-.sidebarRight .mainContent{width: 740px;}
-.sidebarRight .photos{width: 401px;}
-.sidebarRight .sidebar{padding-left: 25px;}
+#content{width: 1000px; margin-top: 40px;}
+.sidebarLeft .column1{width:167px; float: left; }
+.sidebarLeft .column1 .pad{padding: 0 30px 0 0 ;}
+.sidebarLeft .column1 a{display: block; margin: 0 0 16px 0; font-size: 13px; text-transform:uppercase; font-family:"museo-sans-1","museo-sans-2", Helvetica; color: #857f72; font-weight: 300; font-style:normal; text-align:right;}
+.sidebarLeft .column1 a.active{color: #b83838;}
+.sidebarLeft .column1 a:hover{color: #686255;}
+.sidebarLeft .column2{width: 780px;float: left; border-left: 1px solid #e9e4db; padding-left: 30px; }
+.sidebarLeft .mainContent{width: 740px;}
+.sidebarLeft .photos{width: 401px;}
+.sidebarLeft .sidebar{padding-left: 25px;}
 
 
 /* Footer */
@@ -58,23 +63,42 @@ ul{list-style-type: none;}
 
 
 /* FAQ */
-#faq .column1 {width: 680px;}
-#faq h1{text-align: left; font-size: 20px; margin: 30px 0 6px 0; padding: 0; color: #b83838;}
-#faq h1.pageTitle{color: #b83838; font-size: 23px; text-align:left; padding-bottom: 0px; margin: 0; }
-#faq h1.section {border-top: 1px solid #eee8e3; font-size: 15px; font-weight:700; color: #938070; padding: 10px 0 0 0; margin: 40px 0 15px 0; letter-spacing:2px; }
-#faq h2{margin: 8px 0 4px 0; color: #938070; font-weight: 700;}
-#faq h3{font-size: 16px; margin: 0 0 5px 0;}
-#faq p{margin: 0 0 12px 0; font-size: 14px; line-height: 19px;}
-#faq a{font-size: 14px;}
-#faq ul{margin: 16px 0;}
-#faq li{background: url(../images/arrow_bullet.jpg) 12px 5px no-repeat; padding: 0 0 0 26px; font-size: 14px; margin: 4px 0;}
+#static h1{text-align: left; font-size: 20px; margin: 30px 0 6px 0; padding: 0; color: #b83838;}
+#static h1.pageTitle{color: #b83838; font-size: 23px; text-align:left; padding-bottom: 0px; margin: 0; }
+#static h1.section {border-top: 1px solid #eee8e3; font-size: 15px; font-weight:700; color: #938070; padding: 10px 0 0 0; margin: 40px 0 15px 0; letter-spacing:2px; }
+#static h2{margin: 8px 0 4px 0; color: #938070; font-weight: 700;}
+#static h3{font-size: 16px; margin: 0 0 5px 0;}
+#static p{margin: 0 0 12px 0; font-size: 14px; line-height: 19px;}
+#static a{font-size: 14px;}
+#static ul{margin: 16px 0;}
+#static li{background: url(../images/arrow_bullet.jpg) 12px 5px no-repeat; padding: 0 0 0 26px; font-size: 14px; margin: 4px 0;}
+#static #header .button{float: right; margin-top: 16px;}
+#static #header .login{color: #c7b79f; float: right; margin: 22px 20px 0 0; font-size: 12px;font-family:"museo-sans-1","museo-sans-2", Helvetica; font-style:normal;}
+#static #header .login:hover{color: #fff;}
 
-#faq .whatis{background: #f9f8f6;border-radius:8px; -webkit-border-radius: 8px; -moz-border-radius: 8px; padding: 20px;}
-#faq .whatis h1{margin: 0 0 10px 0; padding: 0; }
-#faq .whatis h2{margin: 20px 0 6px 0; font-size: 25px; font-weight: 100;}
+#static .whatis{background: #f9f8f6;border-radius:8px; -webkit-border-radius: 8px; -moz-border-radius: 8px; padding: 20px;}
+#static .whatis h1{margin: 0 0 10px 0; padding: 0; }
+#static .whatis h2{margin: 20px 0 6px 0; font-size: 25px; font-weight: 100;}
 
 .jumpList{margin: 15px 0; padding: 8px 0; border-top: 1px solid #eee8e3; border-bottom: 1px solid #eee8e3; font-size: 13px; color: #938070;}
 .jumpList a{margin: 0 10px; }
 
-.notMember{float: right; text-align:right;margin-top: 23px; font-size: 14px;}
-.notMember .button{margin-left: 10px;}
+
+
+.subPhoto{float: left; margin: 6px 30px 20px -70px; text-align:right;}
+.subPhoto img{margin-bottom: 5px;}
+.subPhoto span{color: #a49c8b; font-size: 13px; }
+.pullquote{color: #b83838; font-size: 21px; font-weight:100; padding: 20px 20px 40px 310px; line-height:24px; }
+
+#teamTbl{width: 840px; float: left;}
+#teamTbl td{vertical-align: top; padding: 0 30px 0 0;}
+#teamTbl td p{font-size: 12px;}
+#teamTbl h1{font-size: 17px; margin: 14px 0 5px 0; padding: 0;}
+
+
+
+
+
+
+
+
