--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -117,7 +117,7 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 
                                                           
          .jcarousel-skin-fadmashion .views-field-body, 
-.jcarousel-skin-fadmashion .views-field-field-graphic {float: left; margin-top: 15px; }
+.jcarousel-skin-fadmashion .views-field-field-graphic {float: left; }
 .jcarousel-skin-fadmashion .views-field-body {color: #322F2C; width:520px;font-weight:300;line-height:20px;padding:20px 40px 20px 30px;}
 
 /*.region-featured #block-views-nodequeue-2-block { width: 0px; height: 0;}
@@ -466,7 +466,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 #block-views-nodequeue-2-block .howitworks-body p{font-size: 18px; color: #000; line-height: 25px; font-weight: 300;}
 #block-views-nodequeue-2-block .pad{padding: 19px 0 0 36px;}
 #block-views-nodequeue-2-block .views-field-field-graphic, #block-views-nodequeue-2-block .views-field-title {float: left;}
-#block-views-nodequeue-2-block .views-field-field-graphic {width: 410px;}
+#block-views-nodequeue-2-block .views-field-field-graphic {width: 410px;margin-top: 15px; }
 #block-views-nodequeue-2-block .views-field-title{width: 360px; text-align:center; padding-top: 123px;} 
 #block-views-nodequeue-2-block .views-field-body {text-align:center; }
 
