--- a/themes/fadmashion_commerce/css/colorbox_blank.css
+++ b/themes/fadmashion_commerce/css/colorbox_blank.css
@@ -31,7 +31,7 @@
     .blankBox#colorbox #cboxContent{background: transparent;}
     
         .blankBox#colorbox #cboxError{padding:50px; border:1px solid #ccc;}
-        .blankBox#colorbox  #cboxLoadedContent{margin-bottom:28px;}
+        .blankBox#colorbox  #cboxLoadedContent{margin-bottom:28px; padding-top: 36px; }
         .blankBox#colorbox #cboxTitle{position:absolute; bottom:4px; left:0; text-align:center; width:100%; color:#949494;}
         .blankBox#colorbox  #cboxCurrent{position:absolute; bottom:4px; left:58px; color:#949494;}
         .blankBox#colorbox #cboxSlideshow{position:absolute; bottom:4px; right:30px; color:#0092ef;}
@@ -41,7 +41,7 @@
         .blankBox#colorbox #cboxNext.hover{background-position:-50px -25px;}
         .blankBox#colorbox #cboxLoadingOverlay{background:url(../images/colorbox/loading323.gif) no-repeat center center;}
         .blankBox#colorbox #cboxLoadingGraphic{background:url(../images/loading232.gif) no-repeat center center;}
-        .blankBox#colorbox #cboxClose{position:absolute; top:76px; left:885px; background:url(../images/controls.png) no-repeat -25px 0; width:25px; height:25px; text-indent:-9999px;}
+        .blankBox#colorbox #cboxClose{position:absolute; top:95px; left:885px; background:url(../images/controls.png) no-repeat -25px 0; width:25px; height:25px; text-indent:-9999px;}
         .blankBox#colorbox #cboxClose.hover{background-position:-25px -25px;}
 
 
