--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -460,7 +460,7 @@ filter:progid:DXImageTransform.Microsoft.gradient(startColorStr='#ffffff',EndCol
 .page-express-checkout-confirmation .facebook{color: #5e76ad; font-size: 14px; font-weight: 300; padding: 18px 0;}
 
 /* How it Works Overlay */
-#block-views-nodequeue-2-block{width: 928px; height: 528px; background: url("../images/howitworks_background.png") top left no-repeat; }
+#block-views-nodequeue-2-block{width: 928px; padding: 0 36px; height: 528px; background: url("../images/howitworks_background.png") top left no-repeat; }
 #block-views-nodequeue-2-block h1{color: #a6352f; font-size: 29px; font-weight: 100; margin-bottom: 30px; line-height: 34px; }
 #block-views-nodequeue-2-block h2{color:#CABFB8;text-transform: uppercase;font-size:15px;font-weight:500;left:530px;letter-spacing:3px;margin-bottom:30px;position:absolute;top:105px;}
 #block-views-nodequeue-2-block .howitworks-body p{font-size: 18px; color: #000; line-height: 25px; font-weight: 300;}
