--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -130,8 +130,8 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 .photos{padding-bottom: 100px;}
 .photos.no-thumbs{padding-bottom: 0px !important;}
 .photos .pagination li {float: left; margin: 0 5px 5px 0; }
-.photos .pagination li.current a {border:1px solid #7F7F7F; margin:0;}
-.photos .pagination li a {border:1px solid #F0EEEA;}
+.photos .pagination li.current a img{border:1px solid #7F7F7F; margin:0;}
+.photos .pagination li a img{border:1px solid #F0EEEA;}
 
 .timer{background: url(../images/bg_timer.jpg) top left repeat-x;border-top-left-radius:4px; -webkit-border-top-left-radius: 4px; -moz-borde-top-left-radius: 4px;border-top-right-radius:4px; -webkit-border-top-right-radius: 4px; -moz-borde-top-right-radius: 4px; height: 52px; color: #d9cac9; font-weight:normal; font-size: 13px;  width: 332px;}
 .timer span{ font-style:normal; font-size:20px; color: #fff; position: relative; top: 2px; padding-left: 5px; font-weight: 500; font-family:"museo-sans-1","museo-sans-2", Helvetica;}
