--- a/themes/fadmashion_commerce/css/style.css
+++ b/themes/fadmashion_commerce/css/style.css
@@ -135,6 +135,7 @@ font-family:"museo-sans-1","museo-sans-2",Helvetica;}
 .photos .pagination li a img:hover{border:1px solid #A32E27;}
 .photos .slides_container img{border:1px solid #F0EEEA;}
 .photos .next, .photos .prev {float: left; display: block;}
+.photos .next:hover, .photos .prev:hover {background-position: bottom left;}
 .photos .next {text-indent: -9999px; background:url("../images/img_nav_next.jpg") no-repeat scroll left top transparent;height:27px;width:56px;}
 .photos .prev {text-indent: -9999px; background:url("../images/img_nav_prev.jpg") no-repeat scroll left top transparent;height:27px;width:56px;}
 
